--- a/widget/src/components/messages/ButtonMessage.scss
+++ b/widget/src/components/messages/ButtonMessage.scss
@@ -50,6 +50,7 @@
 .sc-message--carousel-element {
   .sc-message--buttons-content {
     padding: 0.5rem;
+    margin-bottom: 16px;
   }
   .sc-message--buttons {
     margin: 0;
